# Buscaminas

./: .gitignore  Menu  Menu.vala  README.md  README.txt  app_runner.sh  meson.build  test_runner.sh
codigo/view/: menu.vala
icc-proyecto-master/src/buscaminas/modelo/: MovimientoInvalidoException.java  Tablero.java
icc-proyecto-master/src/buscaminas/util/: TableroBuscaminasIO.java
icc-proyecto-master/src/buscaminas/vista/: Main.java  Menu.java
propuestas/bm_brayan/: README.txt
propuestas/bm_brayan/ArchivosJava/: CeldaConMinas.java  CeldaSinMina.java  Celdas.java  ComandoErroneoExcepcion.java  Menu.java  MiHilo.java  Tablero.java  TableroPersonalizado.java  TocasteUnaBombaExcepcion.java
propuestas/bm_brayan/Documentacion/: CeldaConMinas.html  CeldaSinMina.html  Celdas.html  ComandoErroneoExcepcion.html  Menu.html  MiHilo.html  Tablero.html  TableroPersonalizado.html  TocasteUnaBombaExcepcion.html  allclasses-index.html  allclasses.html  allpackages-index.html  constant-values.html  deprecated-list.html  help-doc.html  index-all.html  index.html  member-search-index.js  overview-tree.html  package-summary.html  package-tree.html  package-use.html  serialized-form.html  type-search-index.js
propuestas/bm_brayan/Documentacion/class-use/: CeldaConMinas.html  CeldaSinMina.html  Celdas.html  ComandoErroneoExcepcion.html  Menu.html  MiHilo.html  Tablero.html  TableroPersonalizado.html  TocasteUnaBombaExcepcion.html
propuestas/bm_cano/icc-proyecto-master/: README.md  makefile
propuestas/bm_cano/icc-proyecto-master/src/buscaminas/modelo/: Casilla.java  CasillaInvalidaException.java  Tablero.java  TableroBuscaminas.java
propuestas/bm_cano/icc-proyecto-master/src/buscaminas/util/: Aleatorio.java
propuestas/bm_cano/icc-proyecto-master/src/buscaminas/vista/: Main.java  Menu.java  MenuBuscaminas.java
pruebas/: estado_jugando_prueba.vala  estado_perdido_prueba.vala  minas_prueba.vala  presionar_prueba.vala  presionar_una_vez_prueba.vala  propiedades_del_tablero.vala  tablero_prueba.vala
reporte/: Reporte.tex
src/modelo/: Tablero.vala
src/vista/: Menu  Menu.vala
